--- a/JSCapp/index.css
+++ b/JSCapp/index.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "SpecialElite";
+  src: url("../fonts/SpecialElite-Regular.ttf");
+}
+
 body {
   margin: 5rem;
 
@@ -5,4 +10,9 @@ body {
 }
 .heading {
   font-size: x-large;
+  font-family: SpecialElite;
+}
+.buttons {
+  margin: 3rem;
+  word-spacing: 2rem;
 }
