--- a/JSCapp/index.css
+++ b/JSCapp/index.css
@@ -6,26 +6,44 @@
   font-family: "digital";
   src: url("../fonts/DIGITALDREAMFAT.ttf");
 }
-
+:root {
+  --primary: #d81e5b;
+  --secondary: #8a4fff;
+  --grey: #aaa;
+  --light: #eee;
+  --dark: #131a26;
+}
+* {
+  box-sizing: border-box;
+  /* margin: 0; */
+}
 body {
-  margin: 1rem;
+  background-color: var(--dark);
+  color: var(--light);
+  margin-top: 5%;
+  border-width: 2rem solid;
+  border-radius: 3rem;
   /* margin-top: 15%; */
   text-align: center;
+  border-width: 1px;
+  border-radius: 2rem;
+  border-style: solid;
+  border-color: var(--primary);
 }
 .heading {
-  font-size: x-large;
+  font-size: 4rem;
   /* font-family: SpecialElite;
    */
   font-family: digital;
 }
 .buttons {
-  margin: 3rem;
-  word-spacing: 2rem;
+  margin: 2rem;
+  word-spacing: 3rem;
+  padding: 3rem;
+  background-color: var(--dark);
 }
-.main {
-  border-width: 1px;
-  border-style: dotted;
-}
+
 #JScounting {
   font-family: digital;
+  font-size: 4rem;
 }
